--- a/index.html
+++ b/index.html
@@ -2,36 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <!-- displays site properly based on user's device -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; margin-top: 50px; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+
 </head>
 <body>
+ <div class="outer-card">
+   <div class="image-container">
+     <img src="images/illustration-hero.svg" alt="" class="logo">
+   </div>
+   <div class="summary-container">
+     <h1 class="summary">
+      Order Summary
+     </h1>
+     <p class="summary-text">
+      You can now listen to millions of songs, audiobooks, and podcasts on any 
+      device anywhere you like!
+     </p>
+   </div>
+   <div class="plan-container">
+     <div class="inner-container">
+      <img src="images/icon-music.svg" alt="" class="icon">
+      <div class="plan-description">
+        <p class="plan">Annual Plan</p>
+        <p class="price">$59.99/year</p>
+      </div>
+     </div>
+     <button class="change">Change</button>
+   </div>
 
-  Order Summary
+   <div class="action-container">
+     <button class="payment-btn">Proceed to Payment</button>
+     <button class="cancel-btn">Cancel Order</button>
+   </div>
+   
+ </div>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+  
 
-  Annual Plan
-  $59.99/year
 
-  Change
 
-  Proceed to Payment
-  Cancel Order
+ 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Ani Loladze</a>.
   </div>
 </body>
 </html>
